Add connection notifications in lobby.

--- a/Battleships-android/res/layout/lobby.xml
+++ b/Battleships-android/res/layout/lobby.xml
@@ -35,6 +35,15 @@
                 android:text="Join game" />
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="disconnected"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
     </RelativeLayout>
 
 </LinearLayout>
